[package]
name = "ud_co2s_notification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
chrono-tz = "0.8.1"
dotenv = "0.15.0"
json = "0.12.4"
plotters = "0.3.4"
regex = "1.7.3"
reqwest = { version = "0.11.15", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
serial = "0.4.0"
