[package]
name = "ud_co2s_notification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.8.6"
dotenv = "0.15.0"
json = "0.12.4"
plotters = "0.3.7"
regex = "1.11.3"
reqwest = { version = "0.11.27", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serial = "0.4.0"
